--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -20,3 +20,9 @@ ruby:
     delivered fast, you should add Ruby to your toolbox.
   price: 49.50
   image_url: ruby.png
+
+rails:
+  title: Ruby on Rails
+  description: ...
+  price: 59.90
+  image_url: rails.png
